# strata

./: .gitignore  README.md  TODO  async_task.mojo  community_recipe.yaml  defaultable_examples.mojo  examples.mojo  immutable_examples.mojo  message_examples.mojo  mojoproject.toml  mutable_examples.mojo  pixi.toml  pyproject.toml  recipe.yaml  strata.mojopkg  trait_issue.mojo
examples/: async_immutable_task_examples.mojo  async_mutable_task_examples.mojo  async_runtime_examples.mojo  async_task_examples.mojo  defaultable_examples.mojo  generic_async_examples.mojo  generic_comptime_examples.mojo  generic_examples.mojo  generic_type_examples.mojo  immutable_examples.mojo  message_examples.mojo  mutable_examples.mojo  new_generic_example.mojo  pixi.toml  type_examples.mojo  unsafe_examples.mojo
issues/: default_trait_methods.mojo  doctest.mojo  function_in_structs.mojo  generic_fix.mojo  generic_issue.mojo  infer_order_isssue.mojo  inference_issue.mojo  inherit_constraints.mojo  parallel_nested.mojo  pointers_issue.mojo  positional_parameter_issue.mojo  string_slice_issue.mojo  struct_where_clause.mojo  sub_trait_conformance_issue.mojo  trait_issue.mojo  trait_join.mojo  unknown_origin_issue.mojo  variadic_origin.mojo
move/: __init__.mojo  async_immutable_task.mojo  async_mutable_task.mojo  async_runtime.mojo  callable.mojo  defaultable.mojo  generic.mojo  generic_pack.mojo  immutable.mojo  message.mojo  mutable.mojo  python_interop.mojo  runners.mojo  task.mojo  type.mojo  unsafe.mojo
move/task/: immutable.mojo  model.mojo  mutable.mojo  runners.mojo  unit.mojo
move/task_groups/: parallel.mojo  series.mojo
python/: .python-version  pyproject.toml
python/src/move/: __init__.py  message.py
python/src/strata/: __init__.py  graph.py  message.py  mojo_strata.pyi  old_mojo_strata.pyi
python/tests/: __init__.py
python/tests/move/: test_message.py
python/tests/strata/: test_graph.py  test_message.py
src/: async_mutable_task.mojo  custom_tuple.mojo  custom_tuple_v2.mojo  examples.mojo  generic.mojo  generic_comptime.mojo  immutable.mojo  main.mojo  mutable.mojo  new_generic.mojo  python_interop.mojo  python_interop_old.mojo
src/generic/: __init__.mojo  async.mojo  async_fn.mojo  compt.mojo  owned.mojo
src/interop/: python_interop.mojo  python_interop_old.mojo
src/move/: main.mojo
src/tne_campaigns/: main.mojo  other.mojo
src/void/: async_immutable.mojo  async_mutable.mojo  immutable.mojo  type.mojo  (+1 more)
strata/: async_immutable_task.mojo  async_mutable_task.mojo  comptime_generic.mojo  custom_tuple.mojo  custom_tuple_v2.mojo  generic.mojo  generic_async.mojo  generic_comptime.mojo  immutable.mojo  message.mojo  mutable.mojo  new_generic.mojo  python_interop.mojo  python_interop_old.mojo  type.mojo  unsafe.mojo
tests/: pixi.toml  test_async.mojo  test_docs_completeness.mojo  test_runners.mojo
(+10 files in other folders)
