[project]
name = "tne-campaigns"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Samuel Ibarra", email = "Samuel.E.Ibarra@dell.com" }
]
dependencies = [
    "polars>=0.20.23",
    "adbc-driver-postgresql>=0.11.0",
    "psycopg>=3.1.18",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.361",
    "ruff-lsp>=0.0.53",
    "ruff>=0.4.2",
    "typos>=1.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tne_campaigns"]
