[project]
name = "strata"
version = "0.1.0"
description = "Series/Parallel Runner on top of mojo asyncrt"
readme = "README.md"
authors = [{ name = "Samuel Ibarra", email = "Samuel.E.Ibarra@dell.com" }]
requires-python = ">=3.13.5"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
test = ["pytest>=8.3.2", "pytest-xdist>=3.6.1", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", '^\s+\.\.\.']


[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "all"
pythonPlatform = "All"
pythonVersion = "3.13"
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.typos.files]
extend-exclude = []

[tool.ruff]
fix = true
unsafe-fixes = true
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "D203",   # One blank line before class docstring. Conflicts with D213.
    "D212",   # No blank lines allowed before function docstring. Conflicts with D213.
    "EXE",    # Executable python files lints. Don't work on Windows so we cannot use it.
    "COM812", # Conflicts with Formatter
    "ISC001", # Conflicts with Formatter
    "CPY001", # Copyright missing.
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D105",   # Missing docstring in magic method
    "D100",   # Missing docstring in public module
    "T201",   # Print Stmt
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN201", "D104"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.environment]
python-platform = "linux"
python-version = "3.13"

[tool.ty.terminal]
error-on-warning = true
